{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "1cebb27d-477e-4d19-8805-1deec005baf1",
            "actions": [
                {
                    "name": "ForwardAndBack",
                    "type": "Button",
                    "id": "24a84b2e-1c7a-4c64-a025-9bb3cadb60bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftAndRight",
                    "type": "Button",
                    "id": "eb69f121-8e42-4d74-beac-c69781af6af0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "e3f85aa4-6404-4d23-bafe-32b7e8dc051a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickupAndDrop",
                    "type": "Button",
                    "id": "6e6ad1cf-5ff6-42f1-886d-c31414022b79",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "66f7c6c5-e574-4345-90b4-d94eaa821415",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WS",
                    "id": "3d06a7fb-9075-4163-91f8-db0f4405579e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "c89278fb-dc0d-47de-82a6-0c17acd3c09b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "75e4e0a3-806e-4468-9e5a-ad18fd0fee99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "009a5434-9e23-4da1-aea6-c20ce3d6ec34",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7e56af33-4f9c-44c1-aae2-29cf3fb17668",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "07bb9e85-7fda-4741-939f-fc5b5d251cfc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardAndBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "eb8d8f23-5830-43f2-9a30-26e4ee20efc7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b29afb7b-3160-41d8-9e9d-77fdb3e9188b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "528d0808-060c-4258-923b-8ebf9c602f40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "ff44e6de-5f57-4921-940d-1635c4333959",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ec2a6fc3-3141-40c2-87cb-fccb37efb770",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "53810ac6-9873-437c-9388-07fd1af7cc76",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAndRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a92c2715-9a49-4d60-b830-622c765d3561",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c340c28f-718d-4b6f-88cb-7bcf0a8f9e85",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickupAndDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11e8ceb4-64e7-41ff-a6c2-e18dc8b8cbef",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}